Fix detection of some audio drivers
Here's how to tell which one of these drivers to enable:

1) Solaris has <sys/audio.h> and defines AUDIO_SETINFO
2) HP/UX has <sys/audio.h> and defines AUDIO_FORMAT_LINEAR16BIT
3) OpenBSD does not have <sys/audio.h> but has <sys/audioio.h>

However the configure check is broken for the first two because it
looks for dsound.h instead, which is from Microsoft's DirectSound.

Another problem is that those drivers are in completely different
files (sunsound.c and hpsound.c) but both are built and we're using
ifdefs to check for the aforementioned macros and decide which
implementation gets compiled.

This is unnecessary because the configure script can already decide
what file needs to be built, and it is also wrong because the macros
are checked before even including the headers that define them.

It seems that all this was messed up when the sound selection logic
was moved from sound/lowlevel.h to configure.in (patch #133).

This patch fixes these problems so the correct drivers can be built.
Whether they are all still working in modern versions of those
operating systems is a different question, at least OpenBSD removed
API used by the Fuse driver two years ago, see audioio.h r1.26 in
https://github.com/openbsd/src/commit/9215aa3dfad387bca877a805534df6dc

--- a/configure.ac
+++ b/configure.ac
@@ -560,19 +560,26 @@ AC_CHECK_LIB( ao, ao_open_live,
   [AC_MSG_WARN(ao_open_live not found - no libao sound output)]
 )
 
-dnl Solaris and HP/UX
-if test "$ac_cv_header_dsound_h" = yes; then
-  audio_driver_list="$audio_driver_list solaris hpux"
+dnl Solaris, HP/UX and OpenBSD
+if test "$ac_cv_header_sys_audio_h" = yes; then
+
+  AC_COMPILE_IFELSE(
+    [AC_LANG_PROGRAM([[#include <sys/audio.h>]],
+                     [[return AUDIO_SETINFO;]])],
+    [audio_driver_list="$audio_driver_list solaris"])
+
+  AC_COMPILE_IFELSE(
+    [AC_LANG_PROGRAM([[#include <sys/audio.h>]],
+                     [[return AUDIO_FORMAT_LINEAR16BIT;]])],
+    [audio_driver_list="$audio_driver_list hpux"])
+
+elif test "$ac_cv_header_sys_audioio_h" = yes; then
+  audio_driver_list="$audio_driver_list openbsd"
 fi
 
 dnl Open sound system
 if test "$ac_cv_header_sys_soundcard_h" = yes; then
   audio_driver_list="$audio_driver_list oss"
-fi
-
-dnl OpenBSD audio
-if test "$ac_cv_header_sys_audioio_h" = yes; then
-  audio_driver_list="$audio_driver_list openbsd"
 fi
 
 dnl Check if CoreAudio is available
