Use AM_PATH_SDL only once in configure.ac
Fuse can use the SDL library in two different cases that can be
configured independently:

1) User interface + audio driver
2) Joystick support

The configure.ac script uses AM_PATH_SDL in both cases in order to
detect if SDL is available.

This is not a big problem in itself, but if we want to decouple the UI
and audio driver options (to allow for example GTK+ UI with SDL audio,
or SDL UI with ALSA audio) we would need to add AM_PATH_SDL to the
audio driver configuration as well, complicating the logic a bit more.

This patch makes configure.ac use AM_PATH_SDL only once.

--- a/Makefile.am
+++ b/Makefile.am
@@ -62,9 +62,12 @@ fuse_LDADD = \
              $(GTK_LIBS) \
              $(GLIB_LIBS) \
              $(PNG_LIBS) \
-             $(SDL_LIBS) \
              $(X_LIBS) \
              $(XML_LIBS)
+
+if USE_SDL
+fuse_LDADD += $(SDL_LIBS)
+endif
 
 fuse_DEPENDENCIES =
 
@@ -87,8 +90,11 @@ AM_CPPFLAGS = \
               $(LIBSPECTRUM_CFLAGS) \
               $(XML_CFLAGS) \
               -DFUSEDATADIR="\"${pkgdatadir}\"" \
-              $(SDL_CFLAGS) \
               $(PNG_CFLAGS)
+
+if USE_SDL
+AM_CPPFLAGS += $(SDL_CFLAGS)
+endif
 
 AM_CFLAGS = $(WARN_CFLAGS) $(PTHREAD_CFLAGS)
 
