--- a/ui/win32/picture.rc
+++ b/ui/win32/picture.rc
@@ -28,7 +28,7 @@
 
 IDD_PICTURE     DIALOG DISCARDABLE 0, 0, 50, 28
 STYLE           DS_MODALFRAME | WS_POPUP | WS_CAPTION
-                | WS_SYSMENU
+                | WS_SYSMENU | WS_THICKFRAME | WS_CLIPCHILDREN
 EXSTYLE         WS_EX_APPWINDOW
 CAPTION         "Fuse - Keyboard"
 FONT 8, "Ms Shell Dlg 2"
