New dialog to load/save binary data on widget UIs
(patch #423).

--- a/ui/widget/Makefile.am
+++ b/ui/widget/Makefile.am
@@ -35,6 +35,7 @@ CLEANFILES += $(ui_widget_built)
 
 ui_widget_files = \
                   ui/widget/about.c \
+                  ui/widget/binary.c \
                   ui/widget/browse.c \
                   ui/widget/debugger.c \
                   ui/widget/error.c \
