--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "fusepb/libspectrum"]
 	path = fusepb/libspectrum
-	url = git://git.code.sf.net/p/fuse-for-macosx/libspectrum
+	url = https://github.com/speccytools/libspectrum.git
