--- a/fusepb/FuseX.entitlements
+++ b/fusepb/FuseX.entitlements
@@ -8,7 +8,7 @@
 	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
-	<key>com.apple.security.files.bookmarks.document-scope</key>
+	<key>com.apple.security.files.bookmarks.app-scope</key>
 	<true/>
 	<key>com.apple.security.network.server</key>
 	<true/>
