Forked off audiofile and libgcrypt

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "3rdparty/audiofile"]
 	path = 3rdparty/audiofile
-	url = git://git.code.sf.net/p/fuse-for-macosx/audiofile
+	url = git@github.com:speccytools/fuse-audiofile.git
 [submodule "3rdparty/libgcrypt"]
 	path = 3rdparty/libgcrypt
-	url = git://git.code.sf.net/p/fuse-for-macosx/libgcrypt
+	url = git@github.com:speccytools/fuse-libgcrypt.git
 [submodule "fusepb/libspectrum"]
 	path = fusepb/libspectrum
 	url = https://github.com/speccytools/libspectrum.git
