spectranet: TLS translation

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "3rdparty/libspectrum"]
 	path = 3rdparty/libspectrum
 	url = ../libspectrum
+[submodule "3rdparty/mbedtls"]
+	path = 3rdparty/mbedtls
+	url = ../fuse-mbedtls
